--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "angular-ui-router": "^0.3.2"
   },
   "dependencies": {
+    "@theoryofnekomata/jquery-paginator": "temoto-kun/jquery-paginator",
     "angular": "^1.6.0",
     "jquery": "^3.1.1"
   }
