--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
   },
   "dependencies": {
     "@theoryofnekomata/jquery-paginator": "temoto-kun/jquery-paginator",
-    "angular": "^1.6.0",
-    "jquery": "^3.1.1"
+    "angular": "^1.6.0"
   }
 }
