--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^2.0.0",
     "gulp-ng-annotate": "^2.0.0",
+    "gulp-sourcemaps": "^1.9.1",
     "gulp-uglify": "^2.0.0"
   },
   "dependencies": {
